resolved the issue related to spacing

--- a/src/app/ourTeam/ourTeam.scss
+++ b/src/app/ourTeam/ourTeam.scss
@@ -109,7 +109,7 @@
     @include from-320-400{
         padding: 20px;
         background-image: url('../../../public/skilled-mobile.png');
-        background-position-y: -31vw;
+        background-position-y: -39vw;
         height: 330px;
     }
     @include from-400-575{
